Fix img vertical align in about

--- a/src/assets/about.css
+++ b/src/assets/about.css
@@ -30,6 +30,7 @@
   margin-top: -10px;
   margin-left: 3px;
   margin-right: 3px;
+  vertical-align: unset;
 }
 
 .tco-about-modal .modal__footer .version-label {
